--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "axios": "^0.21.4",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.4.5",
+    "speakeasy": "^2.0.0",
     "ws": "^7.4.0"
   }
 }
