--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "speakeasy": "^2.0.0",
     "ws": "^7.4.0"
