--- a/package.json
+++ b/package.json
@@ -14,19 +14,32 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "address": "^1.1.2",
     "adm-zip": "^0.5.12",
+    "atob": "^2.1.2",
     "aws-sdk": "^2.1632.0",
     "axios": "^1.7.2",
+    "binary-parser": "^2.2.1",
     "body-parser": "^1.20.2",
+    "chai": "^4.3.10",
     "crypto-js": "^4.1.1",
     "csv-parse": "^5.5.6",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
+    "mocha": "^10.2.0",
     "node-cron": "^3.0.3",
+    "nyc": "^15.1.0",
+    "pako": "^2.1.0",
+    "proxyquire": "^2.1.3",
+    "public-ip": "^4.0.2",
+    "querystring": "^0.2.0",
+    "sinon": "^17.0.1",
+    "smartapi-javascript": "^1.0.23",
     "speakeasy": "^2.0.0",
-    "ws": "^7.4.0"
+    "winston": "^3.11.0",
+    "ws": "^8.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
